--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,21 @@
       <artifactId>javax.activation</artifactId>
       <version>1.2.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20210307</version>  <!-- Make sure to use the latest version -->
+    </dependency>
 
+    <!--<dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.20.0</version> &lt;!&ndash; Use the latest version &ndash;&gt;
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.20.0</version> &lt;!&ndash; Use the latest version &ndash;&gt;
+    </dependency>-->
   </dependencies>
 </project>
