--- a/pom.xml
+++ b/pom.xml
@@ -56,5 +56,5 @@
       <artifactId>log4j-core</artifactId>
       <version>2.20.0</version> &lt;!&ndash; Use the latest version &ndash;&gt;
     </dependency>-->
-  </dependencies>
+  </dependencies><build><plugins><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>8</source><target>8</target></configuration></plugin></plugins></build>
 </project>
